fixing spacing ;)

--- a/styles/style.css
+++ b/styles/style.css
@@ -122,7 +122,7 @@ main {
 }
 
 .section {
-    padding: 17vh 17px;
+    padding: 70px 17px;
 }
 
 @media (min-width: 768px) {
